# Newton-LLM

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test_mongodb_connection.py
data/: links.txt
frontend/: newton_chat.py
src/api/: newton_api.py
src/core/: config.py  errors.py
src/core/db/: concept.md  documents.py
src/data_crawling/: main.py
src/data_crawling/crawlers/: base.py  wikipedia.py
src/data_ingestion/config/: data_sources.yaml
src/data_ingestion/dags/: newton_wikipedia_etl.py
src/data_ingestion/extractors/: wikipedia_extractor.py
src/data_ingestion/models/: wikipedia_models.py
src/data_ingestion/processors/: text_processors.py
src/data_ingestion/storage/: mongodb_manager.py
src/rag/: data_pipeline.py  evaluator.py  newton_rag.py  reranker.py  vector_store.py
src/scripts/: build_rag_system.py  test_qdrant.py  test_rag.py
