[project]
name = "newton-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.19.0",
    "beautifulsoup4>=4.13.5",
    "neo4j>=5.28.2",
    "openai>=1.104.2",
    "pip>=25.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.14.1",
    "pyyaml>=6.0.2",
    "selenium>=4.35.0",
    "spacy>=3.8.7",
    "structlog>=25.4.0",
]
